--- a/app/views/factory/our/productions/_members/_top_bar.html+phone.erb
+++ b/app/views/factory/our/productions/_members/_top_bar.html+phone.erb
@@ -3,7 +3,7 @@
     <%= link_to({ controller: 'produce_plans' }, state: 'return', class: 'px-4') do %>
       <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
     <% end %>
-    <div class="weui-title is-flex-direction-column">
+    <div class="weui-title flex-direction-column">
       <div>
         <span class="has-text-weight-semibold"><%= params[:produce_on] %></span>
         <span><%= params[:produce_on].to_date.to_fs(:week) if params[:produce_on].present? %></span>
