--- a/app/views/factory/our/productions/_members/_trade_item.html.erb
+++ b/app/views/factory/our/productions/_members/_trade_item.html.erb
@@ -1,4 +1,4 @@
-<div class="level-left is-flex">
+<div class="level-left flex-direction-row">
   <%= form_with theme: nil, model: item, url: { controller: 'trade/in/items', action: 'update', id: item.id }, data: { controller: 'input' }, class: 'is-inline level-item mb-0' do |f| %>
     <%= f.check_box :status, { checked: item.status_checked?, data: { action: 'click->input#form' }, id: nil }, item.id %>
   <% end %>
