--- a/app/views/factory/produce_plans/_overview/_scene.html.erb
+++ b/app/views/factory/produce_plans/_overview/_scene.html.erb
@@ -1,6 +1,6 @@
 <div class="weui-panel is-box">
   <div class="weui-panel__hd">
-    <div class="level is-flex is-justify-content-space-between">
+    <div class="level is-mobile justify-content-space-between">
       <div class="level-left is-several">
         <%= image_tag scene.logo, class: 'image is-32x32' if scene.logo.attached? %>
         <span><%= scene.title %></span>
