--- a/app/views/factory/productions/_dialog/_tab_bar.html.erb
+++ b/app/views/factory/productions/_dialog/_tab_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="columns is-mobile has-border-top is-safe-bottom m-0" style="z-index: 500">
-  <div class="column is-half is-flex is-justify-content-center is-align-items-center">
+  <div class="column is-half is-flex justify-content-center align-items-center">
     <%= render partial: 'cart', locals: { model: @production } if @cart %>
   </div>
   <div class="column is-half">
