--- a/app/views/factory/products/_product.html.erb
+++ b/app/views/factory/products/_product.html.erb
@@ -2,7 +2,7 @@
   <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__hd') do %>
     <%= image_tag model.logo, class: 'weui-media-box__thumb' if model.logo.attached? %>
   <% end %>
-  <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__bd is-flex is-flex-direction-column') do %>
+  <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__bd is-flex flex-direction-column') do %>
     <h4 class="weui-media-box__title"><%= model.name %></h4>
     <p class="weui-media-box__desc pt-0">
       <%= model.description %>
@@ -22,7 +22,7 @@
       <% end %>
     </div>
   <% end %>
-  <div class="weui-media-box__ft is-align-items-flex-end pr-2 pb-4">
+  <div class="weui-media-box__ft align-items-flex-end pr-2 pb-4">
     <%= render partial: 'cart', locals: { model: model.production } if current_cart %>
   </div>
 </div>
