--- a/app/views/application/_produce_plan.html.erb
+++ b/app/views/application/_produce_plan.html.erb
@@ -1,7 +1,7 @@
 <div class="weui-panel is-box is-borderless mt-3">
   <div class="weui-panel__hd">预定</div>
   <div class="weui-panel__bd">
-    <div class="level is-flex is-justify-content-space-between px-4 my-4">
+    <div class="level is-mobile justify-content-space-between px-4 my-4">
       <div class="level-left">
         <span><%= extra_distance_date(@produce_on) %></span>
         <span class="has-text-weight-normal has-text-grey is-size-7"><%= @produce_on %></span>
