--- a/app/views/factory/admin/productions/_index/_top_bar.html+phone.erb
+++ b/app/views/factory/admin/productions/_index/_top_bar.html+phone.erb
@@ -3,7 +3,7 @@
     <%= link_to({ controller: 'products', product_taxon_id: @product.product_taxon_id }, class: 'px-4') do %>
       <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
     <% end %>
-    <div class="weui-title is-flex-direction-column">
+    <div class="weui-title flex-direction-column">
       <div><%= @product.name %></div>
       <div><%= t('.title') %></div>
     </div>
