--- a/app/views/factory/base/_dialog_produce_on.html.erb
+++ b/app/views/factory/base/_dialog_produce_on.html.erb
@@ -20,12 +20,12 @@
   </div>
   <div class="weui-half-screen-dialog__bd">
     <div class="columns as-border is-flex m-0 p-4">
-      <div class="column is-half is-align-self-center">
+      <div class="column is-half align-self-center">
       <% if @prev_plan %>
-        <%= link_to({ produce_on: @prev_plan.produce_on, scene_id: params[:scene_id] }, class: 'is-flex is-align-items-center') do %>
+        <%= link_to({ produce_on: @prev_plan.produce_on, scene_id: params[:scene_id] }, class: 'is-flex align-items-center') do %>
           <i class="fa-solid fa-chevron-left has-text-info"></i>
           <span class="has-text-info">前一天</span>
-          <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
+          <span class="has-text-grey is-size-7 pl-1 is-flex flex-direction-column align-items-center">
             <span><%= @prev_plan.produce_on %></span>
             <span><%= @prev_plan.produce_on.to_fs(:week) %></span>
           </span>
@@ -38,11 +38,11 @@
         </div>
       <% end %>
       </div>
-      <div class="column is-half is-align-self-center">
+      <div class="column is-half align-self-center">
       <% if @next_plan %>
-        <%= link_to({ produce_on: @next_plan.produce_on, scene_id: params[:scene_id] }, class: 'is-flex is-align-items-center') do %>
+        <%= link_to({ produce_on: @next_plan.produce_on, scene_id: params[:scene_id] }, class: 'is-flex align-items-center') do %>
           <span class="has-text-info">后一天</span>
-          <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
+          <span class="has-text-grey is-size-7 pl-1 is-flex flex-direction-column align-items-center">
             <span><%= @next_plan.produce_on %></span>
             <span><%= @next_plan.produce_on.to_fs(:week) %></span>
           </span>
