--- a/app/views/factory/base/_filter_table.html.erb
+++ b/app/views/factory/base/_filter_table.html.erb
@@ -5,7 +5,7 @@
       <% if @produce_plan.prev_plan %>
         <%= link_to({ produce_plan_id: @produce_plan.prev_plan.id, organ_id: params[:organ_id] }, class: 'button is-primary') do %>
           <span class="has-text-info">前一天</span>
-          <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
+          <span class="has-text-grey is-size-7 pl-1 is-flex flex-direction-column align-items-center">
             <span><%= @produce_plan.produce_on - 1 %></span>
             <span><%= (@produce_plan.produce_on - 1).to_fs(:week) %></span>
           </span>
@@ -19,7 +19,7 @@
       <% if @produce_plan.next_plan %>
         <%= link_to({ produce_plan_id: @produce_plan.next_plan.id, organ_id: params[:organ_id] }, class: 'button is-primary') do %>
           <span class="has-text-info">后一天</span>
-          <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
+          <span class="has-text-grey is-size-7 pl-1 is-flex flex-direction-column align-items-center">
             <span><%= @produce_plan.produce_on + 1 %></span>
             <span><%= (@produce_plan.produce_on + 1).to_fs(:week) %></span>
           </span>
