--- a/app/views/factory/our/productions/_index/_tab_bar_cart.html.erb
+++ b/app/views/factory/our/productions/_index/_tab_bar_cart.html.erb
@@ -1,11 +1,11 @@
-<div class="level is-flex mb-0 py-2 has-border-top">
-  <div class="level-left is-flex pl-4">
+<div class="level is-mobile mb-0 py-2 has-border-top">
+  <div class="level-left flex-direction-row pl-4">
     <%= link_to({ controller: 'trade/our/carts', action: 'show', id: @cart.id }, class: 'level-item mb-0') do %>
       <i class="fa-solid fa-bag-shopping fa-2x fa-weui-badge">
         <span class="weui-badge"><%= @cart.items.count %></span>
       </i>
     <% end %>
-    <div class="level-item pl-4 is-align-items-baseline">
+    <div class="level-item pl-4 align-items-baseline">
       <%= @cart.item_amount.to_money.format.html_safe %>
     </div>
   </div>
