--- a/app/views/factory/our/productions/_members/_index_item.html+phone.erb
+++ b/app/views/factory/our/productions/_members/_index_item.html+phone.erb
@@ -1,5 +1,5 @@
 <% member_items = @items.select(&->(i){ i.member_id == model.id }) %>
-<div class="level is-flex">
+<div class="level is-mobile">
   <div class="level-left">
     <div class="level-item is-several">
       <%= image_tag model.avatar.variant(resize_to_limit: [35, 35]), class: 'image is-24x24' if model.avatar.attached? %>
