--- a/app/views/factory/our/productions/_members/_trade_item.html+phone.erb
+++ b/app/views/factory/our/productions/_members/_trade_item.html+phone.erb
@@ -1,5 +1,5 @@
-<div class="level is-flex">
-  <div class="level-left is-flex">
+<div class="level is-mobile">
+  <div class="level-left flex-direction-row">
     <div class="level-item ml-2 has-text-grey"><%= item.good_name %></div>
   </div>
   <div class="level-right is-flex mt-0">
