--- a/app/views/factory/produce_plans/_scene.html.erb
+++ b/app/views/factory/produce_plans/_scene.html.erb
@@ -10,7 +10,7 @@
     <span>~</span>
     <time><%= scene.deliver_finish_at.to_fs(:time) %></time>
   </p>
-  <div class="is-flex is-justify-content-center">
+  <div class="is-flex justify-content-center">
     <div class="button is-light mt-2 pl-0">
       <span class="icon">
         <%= image_tag scene.logo, class: 'image is-32x32' if scene.logo.attached? %>
