--- a/app/views/factory/admin/base/_product_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_product_taxon_bar.html.erb
@@ -2,7 +2,7 @@
   <%= @product_taxon.name %>
 </h2>
 
-<div class="tabs">
+<div class="tabs mb-3">
   <ul>
     <li class="<%= active_helper(product_taxons: ['show', 'edit'], active: 'is-active') %>">
       <%= link_to t('.product_taxons.show.title'), { controller: 'product_taxons', action: 'show', id: @product_taxon.id } %>
