--- a/app/views/factory/admin/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tbody.html.erb
@@ -34,7 +34,7 @@
   </div>
 </td>
 <td>
-  <div>
+  <div class="tags-group">
   <% model.card_price.each do |key, value| %>
     <div class="tags has-addons is-tag-price control mb-0">
       <div class="tag is-success"><%= key %></div>
