--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -18,9 +18,8 @@
       <% end %>
     </ul>
     <% r = model.card_price_min(@cart) %>
-    <% if r.present? && !model.presell %>
+    <% if r.present? %>
       <% if r[:checked] %>
-      <p style="padding-left: 4px"><span class="has-text-grey"><%= model.price.to_money.format.html_safe %></span></p>
       <div class="has-block-space-between pb-1">
         <div class="has-inline-centered">
           <div class="tags has-addons is-price control m-0">
