--- a/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
@@ -7,6 +7,9 @@
     <p><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></p>
   <% end %>
 </th>
-<th><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></th>
+<th>
+  <p><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></p>
+  <p>已上架</p>
+</th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:provides_count) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></th>
