--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -18,7 +18,7 @@
       <% end %>
     </ul>
     <% r = model.card_price_min(@cart) %>
-    <% if r.present? %>
+    <% if @cart && r.present? %>
       <% if r[:checked] %>
       <div class="has-block-space-between pb-1">
         <div class="has-inline-centered">
