--- a/app/views/factory/productions/_base/_brothers.html.erb
+++ b/app/views/factory/productions/_base/_brothers.html.erb
@@ -5,7 +5,9 @@
     <% @production.brothers.enabled.each do |brother| %>
       <%= link_to({ id: brother.id }, data: { turbo_scroll: true }, class: active_helper(id: brother.id, item: 'button', active: 'button is-primary')) do %>
         <span><%= brother.name %></span>
-        <span class="pl-2"><%= brother.price.to_money.format.html_safe %></span>
+        <% unless brother.presell %>
+          <span class="pl-2"><%= brother.price.to_money.format.html_safe %></span>
+        <% end %>
       <% end %>
     <% end %>
     </div>
