--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -30,7 +30,7 @@
             </div>
           </div>
         </div>
-        <div class="is-flex">
+        <div class="flex">
         <% if item = @cart&.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
           <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
         <% else %>
@@ -44,7 +44,7 @@
             <div class="tag is-light"><%= r[:price].to_money.format.html_safe %></div>
             <div class="tag is-success"><%= r[:name] %></div>
           </div>
-          <div class="is-flex">
+          <div class="flex">
           <% if item = @cart&.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
             <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
           <% else %>
@@ -58,7 +58,7 @@
         <div class="has-inline-centered">
           <span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
         </div>
-        <div class="is-flex">
+        <div class="flex">
         <% if item = @cart&.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
           <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
         <% else %>
