--- a/app/views/application/_two_menu.html.erb
+++ b/app/views/application/_two_menu.html.erb
@@ -1,4 +1,4 @@
-<div class="columns is-flex m-4">
+<div class="columns flex m-4">
   <%= link_to({ controller: '/factory/productions' }, class: 'column is-half box mb-0 mr-4') do %>
     <%= image_tag 'menu_01.jpg' %>
     <div class="has-text-centered is-family-zhushi">自取点单</div>
