--- a/app/views/factory/admin/productions/_card/_form.html.erb
+++ b/app/views/factory/admin/productions/_card/_form.html.erb
@@ -7,7 +7,7 @@
         <div class="field-body">
           <%= ef.hidden_field :code, value: card_template.code, index: card_template.id, disabled: !@production.card_price.key?(card_template.code) %>
           <%= ef.number_field :price, step: 0.01, value: @production.card_price.fetch(card_template.code, @production.price), index: card_template.id, disabled: !@production.card_price.key?(card_template.code) %>
-          <div class="field is-narrow has-addons is-flex">
+          <div class="field is-narrow has-addons flex">
             <i class="fa-solid fa-plus" style="cursor: pointer" data-action="click->enter#open"></i>
             <i class="fa-solid fa-minus pl-1" style="cursor: pointer" data-action="click->enter#close"></i>
           </div>
