--- a/app/views/factory/in/payments/wxpay_pc_pay.html.erb
+++ b/app/views/factory/in/payments/wxpay_pc_pay.html.erb
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="tile is-parent">
-      <div class="tile is-child is-flex align-items-center">
+      <div class="tile is-child flex align-items-center">
         <figure class="image">
           <%= image_tag @image_url %>
         </figure>
