--- a/app/views/factory/our/productions/_members/_trade_item.html.erb
+++ b/app/views/factory/our/productions/_members/_trade_item.html.erb
@@ -7,7 +7,7 @@
     <span class="ml-2"><%= item.single_price.to_money.format.html_safe %></span>
   </div>
 </div>
-<div class="level-right is-flex mt-0">
+<div class="level-right flex mt-0">
   <div class="level-item mb-0">
     <span><%= item.amount.to_money.format.html_safe %></span>
   </div>
