--- a/app/views/factory/produce_plans/_scene.html.erb
+++ b/app/views/factory/produce_plans/_scene.html.erb
@@ -1,16 +1,16 @@
 <%= link_to({ controller: '/factory/productions', scene_id: scene.id, produce_on: produce_on }, class: 'column is-half-mobile has-text-grey') do %>
-  <p class="is-size-7 has-text-centered">
+  <p class="size-7 has-text-centered">
     <span>预定截止：</span>
     <span><%= extra_distance_date(produce_on) %></span>
     <time><%= scene.book_finish_at.to_fs(:time) %></time>
   </p>
-  <p class="is-size-7 has-text-centered">
+  <p class="size-7 has-text-centered">
     <span>配送时间：</span>
     <time><%= scene.deliver_start_at.to_fs(:time) %></time>
     <span>~</span>
     <time><%= scene.deliver_finish_at.to_fs(:time) %></time>
   </p>
-  <div class="is-flex justify-content-center">
+  <div class="flex justify-content-center">
     <div class="button is-light mt-2 pl-0">
       <span class="icon">
         <%= image_tag scene.logo, class: 'image is-32x32' if scene.logo.attached? %>
