--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -1,7 +1,7 @@
 <div class="weui-media-box weui-media-box_text">
   <div class="weui-media-box__title">
     <span><%= part_taxon.name %></span>
-    <span class="weui-panel__extra is-size-7">
+    <span class="weui-panel__extra size-7">
       <span><%# product_part_taxon.select_str %></span>
     </span>
   </div>
