--- a/app/views/factory/productions/_base/_space_desk.html.erb
+++ b/app/views/factory/productions/_base/_space_desk.html.erb
@@ -1,4 +1,4 @@
-<div class="box is-radiusless is-flex justify-content-space-between mb-0">
+<div class="box is-radiusless flex justify-content-space-between mb-0">
   <div>
     <i class="fa-solid fa-location-dot has-text-grey"></i>
     <span class="pl-1"><%= @desk.content %></span>
