--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -2,7 +2,7 @@
   <div>
     <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'has-column-centered px-2') do %>
       <i class="fa-solid fa-cart-shopping"></i>
-      <span class="is-size-7 pt-1 has-text-grey"><%= t('trade.my.carts.show.title') %></span>
+      <span class="size-7 pt-1 has-text-grey"><%= t('trade.my.carts.show.title') %></span>
     <% end if @cart %>
   </div>
   <div class="has-v-centered">
