--- a/app/views/factory/admin/products/_sort/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_sort/_index_tbody.html.erb
@@ -16,7 +16,7 @@
   <% model.product_part_taxons.each do |product_part_taxon| %>
     <p>
       <span><%= product_part_taxon.name %></span>
-      <span class="has-text-grey is-size-7"><%= product_part_taxon.select_str %></span>
+      <span class="has-text-grey size-7"><%= product_part_taxon.select_str %></span>
     </p>
   <% end %>
   <p>
