--- a/app/views/factory/admin/scenes/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/scenes/_base/_index_tbody.html.erb
@@ -26,7 +26,7 @@
 <% end %>
 </td>
 <td>
-  <div class="is-flex align-items-center">
+  <div class="flex align-items-center">
     <%= render partial: 'cart', locals: { model: model } %>
   </div>
 </td>
