--- a/app/views/factory/base/_dialog_scene.html.erb
+++ b/app/views/factory/base/_dialog_scene.html.erb
@@ -8,13 +8,13 @@
     <div class="weui-half-screen-dialog__hd__main">
       <div class="weui-half-screen-dialog__title">
         <span><%= extra_distance_date(params[:produce_on].to_date) %></span>
-        <span class="has-text-weight-normal has-text-grey is-size-7"><%= params[:produce_on] %></span>
+        <span class="has-text-weight-normal has-text-grey size-7"><%= params[:produce_on] %></span>
       </div>
     </div>
     <div class="weui-half-screen-dialog__hd__side"></div>
   </div>
   <div class="weui-half-screen-dialog__bd">
-    <div class="columns as-border is-flex m-0 p-4">
+    <div class="columns as-border flex m-0 p-4">
       <%= render partial: 'produce_plan_options', collection: @scenes, as: :scene %>
     </div>
   </div>
