--- a/app/views/factory/mem/produce_plans/_index/_produce_plan.html.erb
+++ b/app/views/factory/mem/produce_plans/_index/_produce_plan.html.erb
@@ -1,10 +1,10 @@
 <%= button_to({ action: 'actions', scene_id: model.scene_id, produce_on: model.produce_on }, form: { class: 'column is-half-mobile has-text-grey' }, class: 'column_box py-3', disabled: model.expired?) do %>
-  <p class="is-size-7 has-text-centered">
+  <p class="size-7 has-text-centered">
     <span>预定截止：</span>
     <span><%= extra_distance_date(model.produce_on) %></span>
     <time><%= model.scene.book_finish_at.to_fs(:time) %></time>
   </p>
-  <p class="is-size-7 has-text-centered">
+  <p class="size-7 has-text-centered">
     <span>配送时间：</span>
     <time><%= model.scene.deliver_start_at.to_fs(:time) %></time>
     <span>~</span>
