--- a/app/views/factory/mem/produce_plans/index.html+phone.erb
+++ b/app/views/factory/mem/produce_plans/index.html+phone.erb
@@ -3,11 +3,11 @@
 <div class="weui-panel">
   <div class="weui-panel__hd">
     <span><%= extra_distance_date(produce_on) %></span>
-    <span class="has-text-weight-normal has-text-grey is-size-7"><%= produce_on %></span>
-    <span class="has-text-weight-normal has-text-grey is-size-7"><%= produce_on.to_fs(:week) %></span>
+    <span class="has-text-weight-normal has-text-grey size-7"><%= produce_on %></span>
+    <span class="has-text-weight-normal has-text-grey size-7"><%= produce_on.to_fs(:week) %></span>
   </div>
   <div class="weui-panel__bd">
-    <div class="columns is-multiline is-flex m-0">
+    <div class="columns is-multiline flex m-0">
       <%= render partial: 'produce_plan', collection: produce_plans, as: :model %>
     </div>
   </div>
