--- a/app/views/factory/productions/show.html.erb
+++ b/app/views/factory/productions/show.html.erb
@@ -7,7 +7,7 @@
     <div class="has-text-danger has-text-bold">
       <span><%= @production.price.to_money.format.html_safe %></span>
     </div>
-    <div class="is-flex mt-1">
+    <div class="flex mt-1">
       <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items' } if @cart %>
       <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'button is-small is-primary is-radius') do %>
         <span class="pr-1"><%= t('trade.my.carts.show.title') %></span>
