--- a/app/views/panel/_factory_nav.html+phone.erb
+++ b/app/views/panel/_factory_nav.html+phone.erb
@@ -6,24 +6,24 @@
     </div>
   </div>
   <div class="weui-panel__bd">
-    <div class="columns is-4-mobile is-flex is-vcentered is-centered m-0 is-shadow" data-empty-target="content">
+    <div class="columns is-4-mobile flex is-vcentered is-centered m-0 is-shadow" data-empty-target="content">
       <%= link_to({ controller: 'factory/panel/factory_taxons' }, class: 'column has-column-centered') do %>
         <div class="has-text-primary">
           <i class="fa-solid fa-fw fa-xl fa-folder-tree"></i>
         </div>
-        <div class="has-text-grey is-size-7 mt-1"><%= t('factory.panel.factory_taxons.index.title') %></div>
+        <div class="has-text-grey size-7 mt-1"><%= t('factory.panel.factory_taxons.index.title') %></div>
       <% end %>
       <%= link_to({ controller: 'factory/panel/scenes' }, class: 'column has-column-centered') do %>
         <div class="has-text-primary">
           <i class="fa-solid fa-fw fa-xl fa-lightbulb"></i>
         </div>
-        <div class="has-text-grey is-size-7 mt-1"><%= t('factory.panel.scenes.index.title') %></div>
+        <div class="has-text-grey size-7 mt-1"><%= t('factory.panel.scenes.index.title') %></div>
       <% end %>
       <%= link_to({ controller: 'factory/panel/brands' }, class: 'column has-column-centered') do %>
         <div class="has-text-primary">
           <i class="fa-solid fa-fw fa-xl fa-copyright"></i>
         </div>
-        <div class="has-text-grey is-size-7 mt-1"><%= t('factory.panel.brands.index.title') %></div>
+        <div class="has-text-grey size-7 mt-1"><%= t('factory.panel.brands.index.title') %></div>
       <% end %>
     </div>
   </div>
