--- a/app/views/factory/admin/purchase_items/_index/_button_actions.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_button_actions.html.erb
@@ -1,5 +1,5 @@
 <div class="buttons are-small">
-  <%= form_with url: { action: 'batch_receive' }, data: { controller: 'check-commit', check_commit_check_outlet: 'th' }, class: 'button_to ml-2 is-hidden' do |f| %>
+  <%= form_with url: { action: 'batch_receive' }, data: { controller: 'check-commit', check_commit_check_outlet: 'th' }, class: 'button_to ml-2 display-none' do |f| %>
     <%= f.hidden_field :ids, data: { check_commit_target: 'ids' } %>
     <%= button_tag data: { action: 'check-commit#doSubmit' }, class: 'button is-small has-text-success' do %>
       <i class="fa-solid fa-cash-register"></i>
