--- a/app/views/factory/admin/purchase_items/_index/_filter_form.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', url: { action: params[:action] }, data: { switch_target: 'src' }, class: 'is-hidden' do |f| %>
+<%= form_with theme: 'search', url: { action: params[:action] }, data: { switch_target: 'src' }, class: 'display-none' do |f| %>
   <div class="field-body">
     <%= f.text_field :uuid %>
     <div class="field is-narrow">
