--- a/app/views/factory/productions/_show/_top_bar.html+phone.erb
+++ b/app/views/factory/productions/_show/_top_bar.html+phone.erb
@@ -4,6 +4,8 @@
       <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
     <% end %>
     <div class="weui-title"><%= @production.title %></div>
-    <i style="width: 3rem"></i>
+    <%= button_to({ action: 'actions' }, class: 'px-4') do %>
+      <i class="fa-solid fa-lg fa-fw-1 fa-ellipsis-h"></i>
+    <% end %>
   </div>
 </div>
