--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -1,4 +1,4 @@
-<%= render 'breadcrumb' %>
+<%= render 'top_bar' %>
 
 <%= form_with url: { controller: '/factory/productions', action: 'create' }, method: :post, id: 'edit_custom' do |f| %>
   <%= f.hidden_field :product_id, value: @production.product_id %>
@@ -59,3 +59,12 @@
   <% end %>
 </div>
 <% end %>
+
+<div
+  data-controller="mask"
+  data-action="click->mask#close"
+  class="weui-mask weui-mask-share"
+  id="mask"
+  style="display: none"
+>
+</div>
