--- a/app/views/layouts/agent.html+phone.erb
+++ b/app/views/layouts/agent.html+phone.erb
@@ -1,11 +1,8 @@
 <%= render layout: 'layouts/phone_head' do %>
-  <div class="weui-tab">
-    <div class="weui-tab__panel" id="weui-tab__panel">
-      <%= render 'alert' %>
-      <%= yield %>
-    </div>
-    <%= render 'tab_bar_footer' %>
-    <%= render 'tab_bar' %>
-  </div>
-  <%= render 'weui_actionsheet_common' %>
+  <main id="weui-tab__panel">
+    <%= render 'alert' %>
+    <%= yield %>
+  </main>
+  <%= render 'tab_bar_footer' %>
+  <%= render 'tab_bar' %>
 <% end %>
