--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -1,7 +1,9 @@
 <div class="level flex-direction-row is-safe-bottom" style="background-color: #f7f7f7">
   <div class="level-left p-3">
     <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'has-column-centered') do %>
-      <i class="fa-solid fa-cart-shopping size-5"></i>
+      <i class="fa-solid fa-cart-shopping size-5">
+        <span class="weui-badge"><%= @cart.items.count %></span>
+      </i>
       <span class="size-7 has-text-grey"><%= t('trade.my.carts.show.title') %></span>
     <% end if @cart %>
   </div>
