--- a/app/views/factory/productions/_base/_brothers.html.erb
+++ b/app/views/factory/productions/_base/_brothers.html.erb
@@ -1,4 +1,4 @@
-<div class="weui-panel is-box">
+<div class="box is-border">
   <div class="weui-panel__hd">其他型号</div>
   <div class="weui-panel__bd">
     <div class="p-4 buttons are-small" data-controller="custom" data-custom-only-value="<%# product_part_taxon.only_one? %>">
