--- a/app/views/factory/admin/taxon/products/_index/_top_bar.html+phone.erb
+++ b/app/views/factory/admin/taxon/products/_index/_top_bar.html+phone.erb
@@ -1,12 +1,10 @@
-<div class="weui-panel is-borderless">
-  <div data-controller="mini-program" data-mini-program-pt-class="pt-0" class="weui-panel__hd as-bar">
-    <%= link_to({ controller: 'product_taxons' }, class: 'px-4') do %>
-      <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
-    <% end %>
-    <div class="weui-title">
-      <span><%= @product_taxon.name %></span>
-      <span class="tag ml-1"><%= @product_taxon.scene.title %></span>
-    </div>
-    <i style="width: 3rem"></i>
+<div data-controller="mini-program" data-mini-program-pt-class="pt-0" class="box as-bar">
+  <%= link_to({ controller: 'product_taxons' }, class: 'px-4') do %>
+    <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
+  <% end %>
+  <div class="weui-title">
+    <span><%= @product_taxon.name %></span>
+    <span class="tag ml-1"><%= @product_taxon.scene.title %></span>
   </div>
+  <i class="px-4"></i>
 </div>
