--- a/app/views/factory/our/productions/_members/_top_bar.html+phone.erb
+++ b/app/views/factory/our/productions/_members/_top_bar.html+phone.erb
@@ -1,17 +1,15 @@
-<div class="weui-panel is-borderless">
-  <div data-controller="mini-program" data-mini-program-pt-class="pt-0" class="weui-panel__hd as-bar">
-    <%= link_to({ controller: 'produce_plans' }, state: 'return', class: 'px-4') do %>
-      <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
-    <% end %>
-    <div class="weui-title flex-direction-column">
-      <div>
-        <span class="has-text-weight-semibold"><%= params[:produce_on] %></span>
-        <span><%= params[:produce_on].to_date.to_fs(:week) if params[:produce_on].present? %></span>
-      </div>
-      <div>
-        <span class="has-text-weight-semibold"><%= @scene&.title %></span>
-      </div>
+<div data-controller="mini-program" data-mini-program-pt-class="pt-0" class="box as-bar">
+  <%= link_to({ controller: 'produce_plans' }, state: 'return', class: 'px-4') do %>
+    <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
+  <% end %>
+  <div class="weui-title flex-direction-column">
+    <div>
+      <span class="has-text-weight-semibold"><%= params[:produce_on] %></span>
+      <span><%= params[:produce_on].to_date.to_fs(:week) if params[:produce_on].present? %></span>
     </div>
-    <i style="width: 3rem"></i>
+    <div>
+      <span class="has-text-weight-semibold"><%= @scene&.title %></span>
+    </div>
   </div>
+  <i class="px-4"></i>
 </div>
